--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,13 @@ certifi==2019.3.9
 chardet==3.0.4
 dj-database-url==0.5.0
 Django==2.2.2
+django-debug-toolbar==1.11
 django-heroku==0.3.1
 gunicorn==19.9.0
 idna==2.8
 psycopg2==2.8.2
 psycopg2-binary==2.8.2
+python-decouple==3.1
 pytz==2019.1
 requests==2.22.0
 sqlparse==0.3.0
