--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ defusedxml==0.6.0
 dj-database-url==0.5.0
 Django==2.2.2
 django-allauth==0.39.1
+django-countries==5.3.3
 django-crispy-forms==1.7.2
 django-debug-toolbar==1.11
 django-heroku==0.3.1
